force-app/main/default/objects/Opportunity/fields/Assigned_PD__c.field-meta.xml
<CustomField>
    <fullName>Assigned_PD__c</fullName>
    <label>Assigned Program Director</label>
    <type>Lookup</type>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>Opportunities_PD</relationshipName>
    <description>Sticky PD assignment. Set on first PD booking. All follow-ups route here.</description>
</CustomField>