force-app/main/default/objects/Opportunity/fields/Billing_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Billing_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when ChargeOver billing is configured. Part of portal access gate.</description>
    <label>Billing Setup Complete</label>
    <type>Checkbox</type>
</CustomField>