force-app/main/default/objects/Opportunity/fields/Billing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Billing_Stage__c</fullName>
    <label>Billing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Program</fullName>
                <default>true</default>
                <label>In Program</label>
            </value>
            <value>
                <fullName>In Legal - Not Suspended</fullName>
            </value>
            <value>
                <fullName>Paused - Not Delinquent</fullName>
            </value>
            <value>
                <fullName>Suspended - In Legal</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Terminated - MBG</fullName>
            </value>
            <value>
                <fullName>Suspended - Delinquent</fullName>
            </value>
            <value>
                <fullName>Pending Termination - Future Payment Due</fullName>
            </value>
            <value>
                <fullName>Pending Termination - No Payment Due</fullName>
            </value>
            <value>
                <fullName>Pending Termination - Payment Still Due</fullName>
            </value>
            <value>
                <fullName>Delinquent</fullName>
            </value>
            <value>
                <fullName>In program - Approaching MBG</fullName>
            </value>
            <value>
                <fullName>In program - MBG window</fullName>
            </value>
            <value>
                <fullName>In program - Post MBG</fullName>
            </value>
            <value>
                <fullName>Delinquent - Approaching MBG</fullName>
            </value>
            <value>
                <fullName>Delinquent - MBG window</fullName>
            </value>
            <value>
                <fullName>Delinquent - Post MBG</fullName>
            </value>
            <value>
                <fullName>Graduated - No payment due</fullName>
            </value>
            <value>
                <fullName>Terminated - Delinquent</fullName>
            </value>
            <value>
                <fullName>Delinquent (email only - no collections)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>