force-app/main/default/objects/Opportunity/fields/ChargeOver_Error__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Error__c</fullName>
    <label>ChargeOver Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>