force-app/main/default/objects/Opportunity/fields/ChargeOver_Paycycle__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Paycycle__c</fullName>
    <label>ChargeOver Paycycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mon</fullName>
                <default>true</default>
                <label>mon</label>
            </value>
            <value>
                <fullName>yrl</fullName>
            </value>
            <value>
                <fullName>qtr</fullName>
            </value>
            <value>
                <fullName>1wk</fullName>
            </value>
            <value>
                <fullName>30d</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>