force-app/main/default/objects/Opportunity/fields/ChargeOver_Paymethod__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Paymethod__c</fullName>
    <label>ChargeOver Paymethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inv</fullName>
                <default>true</default>
                <label>inv</label>
            </value>
            <value>
                <fullName>crd</fullName>
            </value>
            <value>
                <fullName>ach</fullName>
            </value>
            <value>
                <fullName>any</fullName>
            </value>
            <value>
                <fullName>tok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>