force-app/main/default/objects/Opportunity/fields/ChargeOver_Status__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Status__c</fullName>
    <label>ChargeOver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>