force-app/main/default/objects/Opportunity/fields/ChargeOver_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Subscription_ID__c</fullName>
    <label>ChargeOver Subscription ID</label>
    <length>191</length>
    <type>Text</type>
</CustomField>