force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Super Guarantee</fullName>
            </value>
            <value>
                <fullName>Hourly 15hr</fullName>
            </value>
            <value>
                <fullName>Hourly 25hr</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>