force-app/main/default/objects/Opportunity/fields/Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>