force-app/main/default/objects/Opportunity/fields/Enrollment_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrollment Incentive</label>
    <type>Checkbox</type>
</CustomField>