force-app/main/default/objects/Opportunity/fields/Financial_Aid__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Aid</label>
    <type>Checkbox</type>
</CustomField>