force-app/main/default/objects/Opportunity/fields/First_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Booking_Date__c</fullName>
    <label>First Booking Date</label>
    <type>Date</type>
</CustomField>