force-app/main/default/objects/Opportunity/fields/FSS_Link_Used_At__c.field-meta.xml
<CustomField>
    <fullName>FSS_Link_Used_At__c</fullName>
    <label>FSS Link Used At</label>
    <type>DateTime</type>
</CustomField>