force-app/main/default/objects/Opportunity/fields/FSS_Scheduling_Link__c.field-meta.xml
<CustomField>
    <fullName>FSS_Scheduling_Link__c</fullName>
    <label>FSS Scheduling Link</label>
    <type>Url</type>
</CustomField>