force-app/main/default/objects/Opportunity/fields/MBG_Window_End__c.field-meta.xml
<CustomField>
    <fullName>MBG_Window_End__c</fullName>
    <label>MBG Window End</label>
    <type>Date</type>
</CustomField>