force-app/main/default/objects/Opportunity/fields/MBG_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>MBG_Window_Start__c</fullName>
    <label>MBG Window Start</label>
    <type>Date</type>
</CustomField>