force-app/main/default/objects/Opportunity/fields/Most_Recent_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Meeting_Date__c</fullName>
    <label>Most Recent Meeting Date</label>
    <type>Date</type>
</CustomField>