force-app/main/default/objects/Opportunity/fields/Most_Recent_Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Meeting_Location__c</fullName>
    <label>Most Recent Meeting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>