force-app/main/default/objects/Opportunity/fields/Most_Recent_SOM_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SOM_Call_Date__c</fullName>
    <label>Most Recent SOM Call Date</label>
    <type>Date</type>
</CustomField>