force-app/main/default/objects/Opportunity/fields/Most_Recent_SOM_Created__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SOM_Created__c</fullName>
    <label>Most Recent SOM Created</label>
    <type>Date</type>
</CustomField>