force-app/main/default/objects/Opportunity/fields/Most_Recent_SOM_HS_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SOM_HS_Meeting_ID__c</fullName>
    <description>Support field - The ID of the SOM call that was booked</description>
    <label>Most Recent SOM HS Meeting ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>