force-app/main/default/objects/Opportunity/fields/Owner_of_last_meeting_from_Meetings_tool__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_last_meeting_from_Meetings_tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Support - Owner of the meeting selected in the round robin</description>
    <label>Owner of last meeting from Meetings tool</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>