force-app/main/default/objects/Opportunity/fields/PD_Link_Used_At__c.field-meta.xml
<CustomField>
    <fullName>PD_Link_Used_At__c</fullName>
    <label>PD Link Used At</label>
    <type>DateTime</type>
</CustomField>