force-app/main/default/objects/Opportunity/fields/PD_Scheduling_Link__c.field-meta.xml
<CustomField>
    <fullName>PD_Scheduling_Link__c</fullName>
    <label>PD Scheduling Link</label>
    <type>Url</type>
</CustomField>