force-app/main/default/objects/Opportunity/fields/Referral_Discount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Discount</label>
    <type>Checkbox</type>
</CustomField>