force-app/main/default/objects/Opportunity/fields/Refferral_Family__c.field-meta.xml
<CustomField>
    <fullName>Refferral_Family__c</fullName>
    <label>Refferral Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>