force-app/main/default/objects/Opportunity/fields/Renewal_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_10__c</fullName>
    <label>Renewal Date 10</label>
    <type>Date</type>
</CustomField>