force-app/main/default/objects/Opportunity/fields/Renewal_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_1__c</fullName>
    <label>Renewal Date 1</label>
    <type>Date</type>
</CustomField>