force-app/main/default/objects/Opportunity/fields/Renewal_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_2__c</fullName>
    <label>Renewal Date 2</label>
    <type>Date</type>
</CustomField>