force-app/main/default/objects/Opportunity/fields/Sibling_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sibling_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sibling Discount</label>
    <type>Checkbox</type>
</CustomField>