force-app/main/default/objects/Opportunity/fields/SO_Meeting_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>SO_Meeting_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SO Meeting Rescheduled</label>
    <type>Checkbox</type>
</CustomField>