force-app/main/default/objects/Opportunity/fields/SOM_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SOM_DateTime__c</fullName>
    <label>SOM DateTime</label>
    <type>DateTime</type>
</CustomField>