force-app/main/default/objects/Opportunity/fields/SOM_No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>SOM_No_Show_Count__c</fullName>
    <label>SOM No Show Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>